Fix: Bug: Attempt at fixing wrap issue (change tablet media query size, adjust margin).

--- a/Media_Site/static/styles.css
+++ b/Media_Site/static/styles.css
@@ -424,7 +424,7 @@ body {
 
 /* MEDIA QUERIES */
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 820px) {
     .main-flex-wrapper {
         flex-direction: column;
         /* align-items: center; */
@@ -489,6 +489,10 @@ body {
         padding: .15em;
     }
 
+    .recommended-item, .movie-item, .show-item {
+        margin: 0;
+    }
+
 }
 
 @media all and (max-width: 375px) {
@@ -506,6 +510,10 @@ body {
     .recommended-item > .item-image, .show-item > .item-image, .movie-item > .item-image {
         height: 110px;
         width: 164px;
+    }
+
+    .recommended-item, .movie-item, .show-item {
+        margin: 2em;
     }
 
     .trending-bucket {
